fix - Fixed flex wrap out of bounds for elements
---

We've fixed elements that can go out of bounds when flex wrap is not
enabled.

---

Type: fix
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/aptivi.github.io/wwwroot/css/app.css
+++ b/aptivi.github.io/wwwroot/css/app.css
@@ -438,3 +438,7 @@ input#qsearch.form-control, div.input-group-btn {
 .label-primary {
     background-color: #6700FF;
 }
+
+.d-sm-flex {
+    flex-wrap: wrap;
+}
